samples/_failures_safe/1761512788_5fb2c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62e550a3.c: In function ‘main’:
./samples/SAFE/__tmp_62e550a3.c:162:16: error: missing terminating " character
  162 |         printf(", Value: \"%
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_62e550a3.c:162:9: error: expected expression at end of input
  162 |         printf(", Value: \"%
      |         ^~~~~~
./samples/SAFE/__tmp_62e550a3.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_62e550a3.c:162:9: error: expected declaration or statement at end of input
